base/traefik/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:latest
          args:
            - --provider=google
            - --client-id=$(GOOGLE_CLIENT_ID)
            - --client-secret=$(GOOGLE_CLIENT_SECRET)
            - --cookie-secret=IQotpjvebuf8R22GxEHAiv4yWRBCuZKMfR3u5h/M7nM=
            - --cookie-secure=true
            - --email-domain=mcarcoba.com
            - --redirect-url=https://mcarcoba.com/oauth2/callback
            - --upstream=static://200
          ports:
            - name: http
              containerPort: 4180
